--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sequelize",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js.",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,12 +14,14 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "pino": "^8.15.0",
     "pino-pretty": "^10.2.0",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.33.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.1"
